test/good/int03.inc.c

jwr_init(buf, 7);

jwr_int(123456);
