test/bad/int03.inc.c

jwr_init(buf, 6, 0);

jwr_int(123456);
